<resources>
    <string name="app_name">Moje první aplikace</string>
    <string name="app_header">Formulář</string>
    <string name="hint_first_name">Zadejte jméno</string>
    <string name="hint_last_name">Zadejte příjmení</string>
    <string name="hint_city">Zadejte obec</string>
    <string name="hint_age">Věk</string>
    <string name="btn_send">Odeslat</string>
    <string name="btn_delete">Smazat</string>
    <string name="edit_name">Zadej jméno</string>
    <string name="edit_surname">Zadej příjmení</string>
    <string name="edit_city">Město</string>
    <string name="edit_age">Věk</string>
    <string name="result_text">Jméno: %1$s\nPříjmení: %2$s\nObec: %3$s\nVěk: %4$s\nPohlaví: %5$s\nSpokojenost: %6$d</string>
    <string name="select_gender">Pohlaví</string>
    <string name="gender_female">Žena</string>
    <string name="gender_male">Muž</string>
    <string name="satisfaction">Spokojenost</string>
</resources>
